# running-analyzer

./: README.md  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2efd5128ef2e_updated_heart_rate.py  b2fe954bd31d_initial_migration.py
data/: Morning_Run.fit
running_analyzer/: cli.py  db.py  models.py  utils.py
tests/: test_db.py
