[project]
name = "running-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "cfgv>=3.4.0",
    "click>=8.1.8",
    "distlib>=0.3.9",
    "filelock>=3.17.0",
    "identify>=2.6.7",
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.2",
    "nodeenv>=1.9.1",
    "platformdirs>=4.3.6",
    "pre-commit>=4.1.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "pygments>=2.19.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.9.6",
    "shellingham>=1.5.4",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
    "typing-extensions>=4.12.2",
    "virtualenv>=20.29.2",
]
